Static path endpoint
Very basic endpoint, did it quickly so we can grab the paths. Ideally it'll be something like tutorial/id/tutname for a tutorial path. (id ensures the path is always unique!)
